added change password and delete account feattures
